# geomfum

./: LICENSE.md  README.rst  pyproject.toml  sampling_meshes.ipynb
.github/workflows/: test.yml
fmib/: _pyfm.py  basis.py  functional_map.py  laplacian.py  linalg.py  operator.py  shape.py
fmib/descriptor/: pipeline.py  spectral.py
fmib/laplacian/: _base.py  mesh.py  point_cloud.py
fmib/numerics/: eig.py
fmib/operator/: functional.py  shape.py
fmib/shape/: _base.py  mesh.py  point_cloud.py
geomfum/: __init__.py  _registry.py  _utils.py  basis.py  convert.py  forward_functional_map.py  functional_map.py  io.py  laplacian.py  linalg.py  network.py  neural_adjoint_map.py  operator.py  plot.py  refine.py  sample.py  upsample.py  upsampling.py
geomfum/_backend/: __init__.py
geomfum/_backend/numpy/: __init__.py  sparse.py
geomfum/_backend/pytorch/: __init__.py  sparse.py
geomfum/dataset/: __init__.py  _defaults.py  _utils.py  notebook.py  torch.py
geomfum/descriptor/: __init__.py  _base.py  learned.py  pipeline.py  spatial.py  spectral.py
geomfum/dfm/: __init__.py  dataset.py  forward_functional_map.py  losses.py  model.py  permutation.py  trainer.py
geomfum/laplacian/: __init__.py  _base.py  _laplacian.py
geomfum/learning/: losses.py  models.py  trainer.py
geomfum/metric/: mesh.py
geomfum/numerics/: eig.py  graph.py  optimization.py
geomfum/operator/: functional.py
geomfum/shape/: _base.py  convert.py  hierarchical.py  mesh.py  point_cloud.py
geomfum/shape/convert/: __init__.py  _plotly.py  _pyvista.py
geomfum/wrap/: __init__.py  deltaconv.py  densemap.py  diffusion_net.py  diffusionnet.py  geopext.py  igl.py  plotly.py  point_net.py  pointnet.py  polyscope.py  pot.py  pp3d.py  pyfm.py  pymeshlab.py  pyrmt.py  pyvista.py  robust.py  robust_laplacian.py  scalablefm.py
geomfun/: _pyfm.py  _registry.py  basis.py  functional_map.py  linalg.py
geomfun/descriptor/: __init__.py  _base.py  pipeline.py  spectral.py
geomfun/laplacian/: __init__.py  _base.py  _laplacian.py  _registry.py  mesh.py
geomfun/operator/: functional.py
geomfun/shape/: __init__.py  _base.py  mesh.py
geomfun/wrap/: __init__.py  igl.py  pyfm.py  robust_laplacian.py
notebooks/demos/: Deep-Functional-Maps-Demo.ipynb  Deep-Functional-Maps-Demoipynb.ipynb  FM-Demo.ipynb  First-FunctionalMap-Demo.ipynb  fps_demo.ipynb  refinement-Demo.ipynb
notebooks/how_to/: 00_load_mesh_from_file.ipynb  01_mesh_laplacian.ipynb  02_mesh_laplacian_spectrum.ipynb  03_descriptors.ipynb  04_descriptor_pipeline.ipynb  05_descriptors_with_feat_extractors.ipynb  06_landmarks.ipynb  07_functional_map.ipynb  07_functional_map_forward.ipynb  08_functional_map.ipynb  08_functional_map_forward.ipynb  09_functional_from_pointwise.ipynb  10_pointwise_from_functional.ipynb  11_hierarchical_mesh.ipynb  12_nested_hierarchical_mesh.ipynb  13_rematching.ipynb  15_refine_functional_map.ipynb  16_vis_basic.ipynb  17_vis_dist.ipynb  18_neural_adjoint_maps.ipynb  deep_functional_maps_models.ipynb  descriptor_pipeline.ipynb  descriptors.ipynb  descriptors_with_feat_extractors.ipynb  fps_demo.ipynb  functional_from_pointwise.ipynb  functional_map.ipynb  functional_map_forward.ipynb  hierarchical_mesh.ipynb  landmarks.ipynb  learn_descriptorsDEMO.ipynb  load_mesh_from_file.ipynb  mesh_laplacian.ipynb  mesh_laplacian_spectrum.ipynb  nested_hierarchical_mesh.ipynb  pointwise_from_functional.ipynb  refine_functional_map.ipynb  rematching.ipynb  sampler.ipynb  scalable_FM.ipynb  (+4 more)
tests/: conftest.py  utils.py
tests/cases/: cmp.py  pyfm.py
tests/cases/laplacian/: __init__.py  _base.py
tests/geomfum/: test_laplacian.py
tests/geomfum/data/: laplacian.py
tests/geomfum/descriptor/: test_spectral.py
tests/geomfum/descriptor/data/: spectral.py
tests/geomfum/laplacian/: test_mesh.py
tests/geomfum/laplacian/data/: mesh.py
tests/pyfm/: test_functional_map.py  test_laplacian.py
tests/pyfm/data/: functional_map.py
tests/pyfm/descriptor/: test_spectral.py
tests/pyfm/descriptor/data/: spectral.py
tests/pyfm/laplacian/: test_mesh.py
tests/scripts/: parametrizer.py  test_notebooks.py
tests/tests_geomfum/test_laplacian/: test_mesh.py
tests/tests_geomfum/test_laplacian/data/: mesh.py
tests/tests_geomfun/test_laplacian/: test_mesh.py
tests/tests_geomfun/test_laplacian/data/: mesh.py
tests/tests_pyfm/: test_functional_map.py
tests/tests_pyfm/data/: functional_map.py
tests/tests_pyfm/test_descriptor/: test_spectral.py
tests/tests_pyfm/test_descriptor/data/: spectral.py
tests/tests_pyfm/test_laplacian/: test_mesh.py
