[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luís F. Pereira", email = "luisfgper@gmail.com" }]
name = "geomfun"
dynamic = ["version"]
readme = "README.rst"
description = "Geometry processing with functional maps."
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "scipy",
    "meshio",
    "pyfmaps",
    "robust-laplacian",
    "libigl",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
repository = "http://github.com/luisfpereira/geomfun"

[tool.setuptools.dynamic]
version = { attr = "geomfun.__version__" }

[tool.setuptools.packages.find]
include = ["geomfun", "geomfun.*"]

[tool.pytest.ini_options]
markers = [
    "smoke: simple and basic numerical tests.",
    "random: tests that use randomized data.",
    "validation: not smoke, neither random.",
    "ignore: deselect tests.",
    "vec: vectorization tests.",
    "shape: array shape tests.",
    "type: checks output types.",
    "mathprop: mathematical properties tests.",
    "slow: for slow tests.",
    "redundant: redundant test.",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = ["D"]
