[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Luís F. Pereira", email = "luisfgper@gmail.com" }]
name = "geomfum"
dynamic = ["version"]
readme = "README.rst"
description = "Geometry processing with functional maps."
license = { file = "LICENSE.md" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.9"
dependencies = ["numpy", "scipy", "scikit-learn", "meshio"]

[project.optional-dependencies]
scalablefm = ["pymeshlab", "multiprocess"]
opt = [
    "pyfmaps",
    "robust-laplacian",
    "libigl",
    "geopext @ git+https://github.com/luisfpereira/geopext.git@2b7a7be1a8fdc6e5755e5f4bda88bc284065e829",
    "geomfum[scalablefm]",
]
rematching = [
    "Rematching @ git+https://github.com/filthynobleman/rematching.git@python-binding",
]
test = [
    "pytest",
    "geomstats",
    "nbformat",
    "nbconvert",
    "ipykernel",
    "ipywidgets",
    "geomfum[opt]",
]

[project.urls]
repository = "http://github.com/luisfpereira/geomfum"

[tool.setuptools.dynamic]
version = { attr = "geomfum.__version__" }

[tool.setuptools.packages.find]
include = ["geomfum", "geomfum.*"]

[tool.pytest.ini_options]
markers = [
    "smoke: simple and basic numerical tests.",
    "random: tests that use randomized data.",
    "validation: not smoke, neither random.",
    "ignore: deselect tests.",
    "vec: vectorization tests.",
    "shape: array shape tests.",
    "type: checks output types.",
    "mathprop: mathematical properties tests.",
    "slow: for slow tests.",
    "redundant: redundant test.",
    "rematching: requires PyRMT.",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "D"]
ignore = ["E731"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"tests/*" = ["D"]
